--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.1",
-    "whatsapp-web.js": "^1.24.0"
+    "whatsapp-web.js": "^1.34.5-alpha.3"
   }
 }
