--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "better-sqlite3": "^12.6.0",
     "express": "^4.18.2",
+    "nodemailer": "^7.0.13",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.1.7",
