--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "better-sqlite3": "^12.6.0",
     "bullmq": "^5.40.0",
+    "chart.js": "^4.5.1",
     "express": "^4.18.2",
     "ioredis": "^5.4.1",
     "nodemailer": "^7.0.13",
